@@ -1,4 +1,5 @@
-10/18/10 #2547, generalized TimeUtils to GameTimerFormat
+10/19/10 #2547, generalized GameOverNode (needs to be migrated to phetcommon, along with associated icons and strings)
+10/18/10 #2547, generalized TimeUtils to GameTimerFormat (needs to be migrated to phetcommon)
 10/18/10 #2547, generalized Game Scoreboard (needs to be migrated to phetcommon, along with associated icons and strings)
 10/14/10 #2547, generalized Game Settings panel (needs to be migrated to phetcommon, along with associated icons and strings)
 # 1.01.00 (44416) Sep 27, 2010
